--- a/RubiconeX-Server/RubiconeX-Server.DataAccess/RubiconeX-Server.DataAccess.csproj
+++ b/RubiconeX-Server/RubiconeX-Server.DataAccess/RubiconeX-Server.DataAccess.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{5FD0396E-C444-4E95-B298-0CFF0746E6C5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>RubiconeX_Server.DataAccess</RootNamespace>
-    <AssemblyName>RubiconeX_Server.DataAccess</AssemblyName>
+    <AssemblyName>RubiconeX-Server.DataAccess</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
